# actor-RexScraper

./: .gitignore  Makefile  README.md  pyproject.toml
.actor/: Dockerfile  actor.json  dataset_schema.json  input_schema.json
src/: main.py
